--- a/style.css
+++ b/style.css
@@ -245,36 +245,34 @@ h3{
 
     }
     #men{
-        width: 400px;
+        width: 300px;
+        height: 400px;
         margin-top: 100px;
         align-items: left;
-        margin-left: 100px;
     }
     #women{
-        width: 420px;
-        height: 530px;
+        width: 300px;
+        height: 400px;
         margin-top: 100px;
         align-items: center;
-        margin-left: 40px;
     }
     #kids{
-        width: 420px;
-        height: 530px;
+        width: 300px;
+        height: 400px;
         margin-top: 100px;
-        align-items: right;
-        margin-left: 40px;
+             
     }
     .omg{
-        background-color: rgb(253, 249, 242);
+        background-color: rgb(0, 0, 0);
         margin-bottom: 10px;
     }
 
 #shop{
     margin-top: 20px;
-    margin-left: 200px;
+    margin-left: 0px;
     background-color: black;
     color: white;
-    font-size: larger;
+    font-size: large;
     border-radius: 20px;
     margin-bottom: 50px;
     align-items: center;
@@ -282,19 +280,21 @@ h3{
 }
 #shop1{
     margin-top: 20px;
-    margin-left: 300px;
+    margin-left: 0px;
     background-color: black;
     color: white;
-    font-size: larger;
+    font-size: large;
     border-radius: 20px;
+    align-items: center;
     font-family: sans-serif;
 }
 #shop2{
     margin-top: 20px;
-    margin-left: 300px;
+    margin-left: 0px;
     background-color: black;
     color: white;
-    font-size: larger;
+    font-size: large;
+    align-items: center;
     font-family: sans-serif;
     border-radius: 20px;
 }
@@ -482,6 +482,19 @@ h3{
   .grid-item3 {
     background-color: rgb(255, 255, 255);
     border: 1px solid rgb(255, 255, 255);
+    padding: 20px;
+    font-size: 30px;
+    text-align: center;
+  }
+  .grid-container4 {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    background-color: #ffffff;
+    padding: 20px;
+  }
+  .grid-item4 {
+    background-color: rgb(185, 182, 182);
+    border: 1px solid rgb(158, 158, 158);
     padding: 20px;
     font-size: 30px;
     text-align: center;
